--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 		<span class="question"></span>
 	</div>
 	<div id="answer-section">
-		<input type="radio" name="option" class="option">
-		<span class="answerOne"></span><br><br>
-		<input type="radio" name="option" class="option">
-		<span class="answerTwo"></span><br><br>
-		<input type="radio" name="option" class="option">
-		<span class="answerThree"></span><br><br>
-		<input type="radio" name="option" class="option">
-		<span class="answerFour"></span><br><br>
+		<input type="radio" name="option" class="option" id="answerOne" value="0">
+		<span class="optionOne"></span><br><br>
+		<input type="radio" name="option" class="option" id="answerTwo" value="1">
+		<span class="optionTwo"></span><br><br>
+		<input type="radio" name="option" class="option" id="answerThree" value="2">
+		<span class="optionThree"></span><br><br>
+		<input type="radio" name="option" class="option" id="answerFour" value="3">
+		<span class="optionFour"></span><br><br>
 	</div>
 	<div id="submit-section">
 		<input type="button" name="submit" value="submit" class="submit">
