--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Breaking Bad Trivia</title>
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="main.css"/>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
+
+	<link rel="icon" type="image/x-icon" href="images/breaking_bad_icon.png">
+
+	<link href='http://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -35,14 +39,14 @@
 		<span class="optionFour"></span><br><br>
 	</div>
 	<div id="submit-section">
-		<input type="button" name="submit" value="submit" class="submit">
+		<input type="button" name="submit" value="Submit" class="submit">
 	</div>
 </div>
 
 <div id="afterSubmit">
 	<h2 id="result"></h2>
 	<br>
-	<h3 class="correctNumber"><span id="numCorrect"></span> out of 5 correct</h3>
+	<h3 class="correctNumber"><span id="numCorrect"></span> out of <span id="five">5</span> correct</h3>
 	<br>
 	<span class="fact"></span>
 	<br>
